--- a/ptech.html
+++ b/ptech.html
@@ -184,6 +184,20 @@
                             <p>Reunião presencial com a ITIX -  treinamento de banco de dados.</p>
                         </div>
                     </div>  
+                    <div class="activity-card">
+                        <img src="img/P-tech/03-09-25.jpeg" alt="Imagem da Atividade 2" onclick="openModal(this.src)">
+                        <div class="activity-info">
+                            <h2>03/09/2025</h2>
+                            <p>Reunião online com a EDUZZ -  Relevância da cibersegurança no cotidiano e no ambiente profissional.</p>
+                        </div>
+                    </div>
+                     <div class="activity-card">
+                        <img src="img/P-tech/16-09-25.jpeg" alt="Imagem da Atividade 2" onclick="openModal(this.src)">
+                        <div class="activity-info">
+                            <h2>16/09/2025</h2>
+                            <p>Reunião online com a EDUZZ -  Inteligência Artificial na Prática: Aplicações no Mercado.</p>
+                        </div>
+                    </div> 
                 </div>
                 <a href="javascript:history.back()" class="back-btn">Voltar</a>
             </div>
@@ -195,3 +209,4 @@
         <script src="js/ptech.js"></script>
     </body>
 </html>
+
