--- a/ptech.html
+++ b/ptech.html
@@ -185,7 +185,7 @@
                         </div>
                     </div>  
                     <div class="activity-card">
-                        <img src="img/P-tech/03-09-25.jpeg" alt="Imagem da Atividade 2" onclick="openModal(this.src)">
+                        <img src="img/P-tech/03-09.jpeg" alt="Imagem da Atividade 2" onclick="openModal(this.src)">
                         <div class="activity-info">
                             <h2>03/09/2025</h2>
                             <p>Reunião online com a EDUZZ -  Relevância da cibersegurança no cotidiano e no ambiente profissional.</p>
@@ -209,4 +209,5 @@
         <script src="js/ptech.js"></script>
     </body>
 </html>
+
 
