Refactor ptech.html for improved structure

--- a/ptech.html
+++ b/ptech.html
@@ -198,6 +198,13 @@
                             <p>Reunião online com a EDUZZ -  Inteligência Artificial na Prática: Aplicações no Mercado.</p>
                         </div>
                     </div> 
+                    <div class="activity-card">
+                        <img src="img/P-tech/30-10-25.jpeg" alt="Imagem da Atividade 2" onclick="openModal(this.src)">
+                        <div class="activity-info">
+                            <h2>16/09/2025</h2>
+                            <p>Reunião online com a EDUZZ -  Desenvolvimento Mobile: Criando aplicativo do zero.</p>
+                        </div>
+                    </div> 
                 </div>
                 <a href="javascript:history.back()" class="back-btn">Voltar</a>
             </div>
@@ -209,5 +216,6 @@
         <script src="js/ptech.js"></script>
     </body>
 </html>
+
 
 
